--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Document</title>
+   <title>Influencer products</title>
    <!-- font-awesome link -->
    <script src="https://kit.fontawesome.com/65b4c8277d.js" crossorigin="anonymous"></script>
    <!-- stylesheet link -->
@@ -19,6 +19,9 @@
    <header id="header">
       <div class="header-container">
          <div class="header-area">
+            <div class="navbar-item">
+               <i class="fa-solid fa-bars"></i>
+            </div>
             <div class="logo">
                <a href="index.html">
                   <h3 class="logo-text">Influencer products</h3>
@@ -27,12 +30,12 @@
             <div class="navigation">
                <nav>
                   <ul class="menu">
-                     <li><a href="#">Home</a></li>
-                     <li><a href="#">Products</a></li>
-                     <li><a href="#">Sign</a></li>
-                     <li><a href="#">Log In</a></li>
-                     <li><a href="#"><i class="fa-solid fa-magnifying-glass"></i></a></li>
-                     <li><a href="#"><i class="fa-solid fa-cart-shopping"></i></a></li>
+                     <li class="nav-menu"><a href="#">Home</a></li>
+                     <li class="nav-menu"><a href="#">Products</a></li>
+                     <li class="nav-menu"><a href="#">Sign</a></li>
+                     <li class="nav-menu"><a href="#">Log In</a></li>
+                     <li class="nav-menu"><a href="#"><i class="fa-solid fa-magnifying-glass"></i></a></li>
+                     <li class="nav-card"><a href="#"><i class="fa-solid fa-cart-shopping"></i></a></li>
                   </ul>
                </nav>
             </div>
